SONARJAVA-4518 Add new Spring Filter and simplify S107, S1185, S1258 & S2226